Fix import paths for sw-register and notification utils, ready for Netlify deploy

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,31 +1,89 @@
 {
-  "name": "Cerita Kita",
-  "short_name": "CeritaKita",
-  "description": "Aplikasi berbagi cerita yang dapat diakses secara offline dan dapat dipasang ke homescreen.",
-  "start_url": "/index.html",
+  "name": "Cerita Kita - Platform Berbagi Cerita",
+  "short_name": "Cerita Kita",
+  "description": "Platform berbagi cerita dan pengalaman inspiratif untuk seluruh masyarakat Indonesia",
+  "start_url": "/",
   "display": "standalone",
   "background_color": "#ffffff",
-  "theme_color": "#1976d2",
-  "orientation": "portrait",
+  "theme_color": "#2196f3",
+  "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/src/public/logo.png",
-      "sizes": "192x192",
-      "type": "image/png"
+      "src": "icons/icon-72x72.png",
+      "sizes": "72x72",
+      "type": "image/png",
+      "purpose": "maskable any"
     },
     {
-      "src": "/src/public/logo.png",
+      "src": "icons/icon-96x96.png",
+      "sizes": "96x96",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "icons/icon-128x128.png",
+      "sizes": "128x128",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "icons/icon-144x144.png",
+      "sizes": "144x144",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "icons/icon-152x152.png",
+      "sizes": "152x152",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "icons/icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "icons/icon-384x384.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "maskable any"
+    },
+    {
+      "src": "icons/icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "maskable any"
     }
   ],
   "shortcuts": [
     {
-      "name": "Tambah Cerita",
-      "short_name": "Tambah",
-      "description": "Langsung menuju halaman tambah cerita",
-      "url": "/#/tambah",
-      "icons": [{ "src": "/src/public/logo.png", "sizes": "192x192" }]
+      "name": "Tambah Cerita Baru",
+      "short_name": "Tambah Cerita",
+      "description": "Langsung ke halaman tambah cerita",
+      "url": "/#/tambah-cerita",
+      "icons": [
+        {
+          "src": "icons/icon-96x96.png",
+          "sizes": "96x96"
+        }
+      ]
     }
-  ]
+  ],
+  "screenshots": [
+    {
+      "src": "screenshots/desktop-screenshot.png",
+      "sizes": "1280x800",
+      "type": "image/png",
+      "form_factor": "wide"
+    },
+    {
+      "src": "screenshots/mobile-screenshot.png",
+      "sizes": "390x844",
+      "type": "image/png",
+      "form_factor": "narrow"
+    }
+  ],
+  "categories": ["social", "entertainment", "lifestyle"]
 }
